# cyoda-dev-console

./: .gitignore  AGENTS.md  README.md  RELEASE.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml  release.yml
apps/dev-console/: .env  .env.example  index.html  package.json  vite.config.ts
apps/dev-console/src/: App.tsx  main.tsx  monacoRuntime.ts
apps/dev-console/src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
apps/dev-console/src-tauri/src/: atomic_write.rs  lib.rs  paths.rs  save_origin.rs  scan_registry.rs
apps/dev-console/src-tauri/src/commands/: agent.rs  config.rs  fs_io.rs  llm.rs  mod.rs  project.rs  shell_ext.rs  watcher.rs
apps/dev-console/src-tauri/tests/: atomic_write.rs  ide_allowlist.rs  path_traversal.rs  watcher_suppression.rs
apps/dev-console/src/__tests__/: agentRoute.test.tsx  contextMenu.test.tsx  customSelect.test.tsx  dirtyLift.test.tsx  displayName.test.ts  firstRun.test.tsx  headerContext.test.tsx  projectExplorer.test.tsx  settings.test.tsx  sidebarNav.test.tsx  splitPane.test.tsx  workflowAssistant.test.tsx
apps/dev-console/src/agent/: AgentContext.tsx  AssistantTab.tsx  BundleTab.tsx  bundle.ts  (+5 more)
docs/: ai-assistant-cost-alternatives.md  claude-cli-mcp-integration.md  code-review-integration-branch.md  specs.md  test-coverage-audit.md  validation-issues-system.md
docs/superpowers/plans/: 2026-06-04-visual-redesign.md
docs/superpowers/specs/: 2026-06-04-visual-redesign-design.md
homebrew/: cyoda-dev-console.rb
scripts/: update-cask-sha.sh
(+62 files in other folders)
