[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "fs", "time"] }
tokio-util = { version = "0.7" }
notify = "7"
notify-debouncer-full = "0.4"
ignore = "0.4"
thiserror = "2"
chrono = { version = "0.4", features = ["clock", "serde"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
which = "7"

[dev-dependencies]
tempfile = "3"
